# my-claude-code-test

./: .gitignore  README.md  pyproject.toml  pytest.ini
.claude/: mcp.json
config/: default_config.json  mcp.json.example  settings.json
docs/: API.md  CONFIGURATION.md  MCP.md  QUICKSTART.md  SESSION.md  api-reference.md  completion-report.md  day4-6-complete.md  day7-9-complete.md  development-guide.md  plan-day-1.md  plan-day-2.md  plan-day-3.md  plan-hour-1.md  plan-hour-2.md  plan-week.md  user-guide.md
src/cc/: __init__.py  main.py
src/cc/bootstrap/: __init__.py  setup.py  state.py
src/cc/bridge/: __init__.py  bridge.py
src/cc/buddy/: __init__.py
src/cc/commands/: __init__.py  advisor.py  agents.py  benchmark.py  branch.py  chrome.py  clear.py  clear_cmd.py  commit.py  compact.py  context_cmd.py  cost.py  debug.py  desktop.py  diff.py  doctor.py  export.py  feedback_cmd.py  files_cmd.py  github_app.py  help_cmd.py  hooks_cmd.py  import_cmd.py  init.py  insights_cmd.py  login.py  mcp.py  mcp_cmd.py  memory.py  models.py  profile.py  resume.py  review.py  sandbox.py  sandbox_cmd.py  sessions.py  skills.py  slack_app.py  stats.py  stats_cmd.py  (+10 more)
src/cc/constants/: __init__.py  api_limits.py  product.py  tools.py
src/cc/context/: __init__.py  collector.py  full_context.py  git.py  prompts.py  system.py  watcher.py
src/cc/coordinator/: __init__.py
src/cc/core/: __init__.py  compression.py  context_builder.py  engine.py  error_recovery.py  executor.py  rate_limiter.py  recovery.py  repl.py  request_queue.py  response_handler.py  session.py  streaming.py
src/cc/hooks/: __init__.py  advanced.py  background.py  clipboard.py  diff.py  global_state.py  history.py  hooks.py  ide.py  input.py  keybindings.py  mcp.py  notifications.py  permissions.py  schedule.py  scroll.py  search.py  session.py  tool_permission.py
src/cc/keybindings/: __init__.py  config.py  parser.py
src/cc/mcp/: __init__.py  client.py  health.py  (+3 more)
tests/: conftest.py  test_additional_tools.py  test_agent_summary.py  test_api_enhanced.py  test_async_executor.py  test_async_tools.py  test_bash.py  test_billing_v2.py  test_cache_manager.py  test_cache_utils.py  test_chrome.py  test_command_history.py  test_command_registry.py  test_commands.py  test_config.py  test_config_manager.py  test_context_builder.py  test_context_full.py  test_desktop.py  test_diff_engine.py  test_doctor_enhanced.py  test_engine.py  test_error_recovery.py  test_history_manager.py  test_hooks.py  test_input_processor.py  test_integration.py  test_json_utils.py  test_keybindings.py  test_mcp.py  test_mcp_health.py  test_mcp_subscriptions.py  test_memory_extraction.py  test_message.py  test_notification_v2.py  test_output_handler.py  test_performance.py  test_permissions.py  test_permissions_v2.py  test_plugins.py  (+34 more)
(+314 files in other folders)
