[project]
name = "claude-code-py"
version = "0.1.0"
description = "Python implementation of Claude Code CLI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "lg" }]
keywords = ["cli", "ai", "claude", "anthropic", "llm"]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "textual>=0.50",
    "pydantic>=2.0",
    "httpx>=0.25",
    "anthropic>=0.20",
    "python-dotenv>=1.0",
    "watchdog>=4.0",
    "prompt-toolkit>=3.0",
    "tomli>=2.0;python_version<'3.11'",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
    "pre-commit>=3.0",
]
pdf = ["pypdf>=4.0"]
image = ["pillow>=10.0"]

[project.scripts]
cc = "cc.main:main"
claude-code-py = "cc.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cc"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]