[project]
name = "claude-code-python"
version = "0.1.0"
description = "Python rewrite of Claude Code CLI"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "textual>=0.50",
    "pydantic>=2.0",
    "httpx>=0.25",
    "anthropic>=0.20",
    "python-dotenv>=1.0",
    "watchdog>=4.0",
    "eval_type_backport>=0.1.3",
    "aiofiles>=24.0",
    "aiohttp>=3.9",
    "prompt-toolkit>=3.0",
    "pyyaml>=6.0",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.20",
    "ruff>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cc"]

[tool.hatch.version]
path = "src/cc/__init__.py"
pattern = "__version__ = ['\"](?P<version>[^'\"]+)['\"]"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
